This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: [sqlite3] don't combine error checks when adding integer constants
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.11, Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: corona10, erlendaasland
Priority: normal Keywords: patch

Created on 2021-10-27 21:02 by erlendaasland, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 29251 merged erlendaasland, 2021-10-27 21:05
PR 29343 merged erlendaasland, 2021-10-31 10:35
Messages (4)
msg405124 - (view) Author: Erlend E. Aasland (erlendaasland) * (Python triager) Date: 2021-10-27 21:02
In Modules/_sqlite/module.c, add_integer_constants() accumulates the return values of repeated PyModule_AddIntMacro() calls. We should change this to instead bailing immediately on error.
msg405396 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-10-31 10:01
New changeset 39b4d5938ce781af41f8c9da72dee46095a78642 by Erlend Egeberg Aasland in branch 'main':
bpo-45634: Don't combine error checks when adding `sqlite3` int constants (GH-29251)
https://github.com/python/cpython/commit/39b4d5938ce781af41f8c9da72dee46095a78642
msg405400 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-10-31 11:22
New changeset ed91f959b032951620f32bcd93ff27223699a86a by Erlend Egeberg Aasland in branch '3.10':
[3.10] bpo-45634: Don't combine error checks when adding `sqlite3` int constants (GH-29251). (GH-29343)
https://github.com/python/cpython/commit/ed91f959b032951620f32bcd93ff27223699a86a
msg405409 - (view) Author: Erlend E. Aasland (erlendaasland) * (Python triager) Date: 2021-10-31 17:22
Thanks for reviewing, Dong-hee!
History
Date User Action Args
2022-04-11 14:59:51adminsetgithub: 89797
2021-10-31 17:22:04erlendaaslandsetstatus: open -> closed
resolution: fixed
messages: + msg405409

stage: patch review -> resolved
2021-10-31 11:22:29corona10setmessages: + msg405400
2021-10-31 10:35:14erlendaaslandsetpull_requests: + pull_request27609
2021-10-31 10:01:32corona10setnosy: + corona10
messages: + msg405396
2021-10-27 21:05:14erlendaaslandsetkeywords: + patch
stage: patch review
pull_requests: + pull_request27515
2021-10-27 21:02:56erlendaaslandcreate