bpo-45634: Don't combine error checks when adding `sqlite3` int constants (GH-29251)